[package]
name = "assembler"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["fixtures"]
resolver = "3"

[dependencies]
anyhow = "1.0"
capstone = "0.12"
clap = { version = "4.5", features = ["derive"] }
object = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
object = { version = "0.36", features = ["write"] }
predicates = "3.1"
